# cli-batteries

./: Cargo.toml  Changelog.md  Readme.md
.cargo/: audit.toml
.github/: CODEOWNERS
.github/workflows/: ci.yml
example/: Cargo.toml  build.rs
example/src/: main.rs
examples/basic-cli/: Cargo.toml  Readme.md
examples/basic-server/: Cargo.toml
examples/basic-server/src/: main.rs
src/: allocator.rs  build.rs  heartbeat.rs  lib.rs  log_fmt.rs  logging.rs  metered_allocator.rs  open_telemetry.rs  prometheus.rs  rand.rs  rayon.rs  shutdown.rs  span_formatter.rs  tiny_log_fmt.rs  tokio_console.rs  version.rs
src/trace/: formats.rs  json_format.rs  mod.rs  open_telemetry.rs  otlp_format.rs  span_and_trace_extractor.rs  span_formatter.rs  tokio_console.rs  utils.rs
src/trace/formats/: datadog.rs  otlp.rs
src/trace/utils/: extract.rs  write_adapter.rs
tests/: main.rs
