[package]
name = "cli-batteries"
description = "Batteries included opinionated command line interfaces"
authors = ["Remco Bloemen <remco@wicked.ventures>"]
version = "0.1.3"
edition = "2021"
homepage = "https://github.com/recmo/cli-batteries"
repository = "https://github.com/recmo/cli-batteries"
keywords = ["logging", "cli"]
categories = ["command-line-interface"]
readme = "Readme.md"
license = "MIT"

[features]
mock_shutdown = []
metered_allocator = [ "prometheus" ]
mimalloc = [ "dep:mimalloc" ]
rand = [ "dep:rand", "dep:rand_chacha" ]
rayon = [ "dep:rayon", "dep:num_cpus" ]
prometheus = [ "dep:prometheus", "dep:hyper", "dep:url" ]

[dependencies]
chrono = "0.4"
color-eyre = { version = "0.6", features = [ "issue-url" ] }
console-subscriber = { version = "0.1", optional = true }
criterion = { version = "0.3", optional = true, features = [ "async_tokio" ] }
eyre = "0.6"
futures = "0.3"
hex = "0.4.3"
hex-literal = "0.3"
itertools = "0.10"
once_cell = "1.12"
proptest = { version = "1.0", optional = true }
structopt = "0.3"
thiserror = "1.0"
tokio = { version = "1.17", features = [ "rt-multi-thread", "sync", "macros", "signal", "tracing" ] }
tracing = "0.1"
tracing-futures = "0.2"
tracing-subscriber = { version = "0.3", features = [ "env-filter", "json" ] }
users = "0.11"

# Mimalloc feature
mimalloc = { version = "0.1", optional = true }

# Rand feature
rand = { version = "0.8.5", optional = true }
rand_chacha = { version = "0.3.1", optional = true }

# Rayon feature
rayon = { version = "1.5.3", optional = true }
num_cpus = { version = "1.13.1", optional = true }

# Prometheus feature
prometheus = { version = "0.13", features = [ "process" ], optional = true }
url = { version = "2.2", optional = true }
hyper = { version = "^0.14.19", features = [ "server", "tcp", "http1", "http2" ], optional = true }

# TODO: Do we need this?
time = { version = "0.3.5", features = [ "formatting", "parsing" ] }

[dev-dependencies]
proptest = { version = "1.0" }
tracing-test = "0.2"
tokio = { version = "1.17", features = [ "fs", "io-util" ] }

[profile.release]
codegen-units = 1
lto = true
panic = "abort"
overflow-checks = true
strip = true

# Compilation profile for any non-workspace member.
# Dependencies are optimized, even in a dev build. This improves dev performance
# while having neglible impact on incremental build times.
[profile.dev.package."*"]
opt-level = 3
