[package]
name = "cli-example"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cli-batteries = { path = "..", features = [ "rand", "rayon", "prometheus", "otlp" ] }
tokio = { version = "1.17", features = [ "fs" ] }
tracing = "0.1.34"
clap = { version = "3.2", features = [ "derive" ] }
http = "0.2.8"

[build-dependencies]
cli-batteries = { path = ".." }

[patch.crates-io]
tracing = { path = "../../thirdparty/tracing/tracing" }
tracing-core = { path = "../../thirdparty/tracing/tracing-core" }
tracing-serde = { path = "../../thirdparty/tracing/tracing-serde" }
tracing-log = { path = "../../thirdparty/tracing/tracing-log" }
tracing-subscriber = { path = "../../thirdparty/tracing/tracing-subscriber" }
tracing-error = { path = "../../thirdparty/tracing/tracing-error" }
tracing-futures = { path = "../../thirdparty/tracing/tracing-futures" }
tracing-flame = { path = "../../thirdparty/tracing/tracing-flame" }
tracing-opentelemetry = { path = "../../thirdparty/tracing/tracing-opentelemetry" }
