[package]
name = "cli-example"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cli-batteries = { path = "..", features = [ "rand", "rayon", "prometheus", "otlp", "datadog" ] }
tokio = { version = "1.17", features = [ "fs" ] }
tracing = "0.1.34"
clap = { version = "4.0", features = [ "derive" ] }
http = "0.2.8"

[build-dependencies]
cli-batteries = { path = ".." }
