[package]
name = "basic-server-example"
version = "0.1.0"
edition = "2021"

[dependencies]
cli-batteries = { path = "../..", features = [ "rand", "rayon", "prometheus", "datadog", "otlp" ] }
tokio = { version = "1.17", features = [ "fs" ] }
tracing = "0.1.34"
clap = { version = "4.0", features = [ "derive" ] }
http = "0.2.8"
axum = "0.6"
serde_json = "1.0.100"
eyre = "0.6"

[build-dependencies]
cli-batteries = { path = "../.." }
